状态描述修改：暂停 -> 挂起，指令执行时添加日志，脚本执行使用独立的子进程

--- a/config/locales/model.zh-CN.yml
+++ b/config/locales/model.zh-CN.yml
@@ -8,7 +8,7 @@ zh-CN:
         failure: "失败"
         done: "完成"
         wait: "等待"
-        hold: "暂停"
+        hold: "挂起"
         normal: "正常"
         paused: "暂停"
         offlined: '下线'
